// Copyright 2017 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package testdata;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message TestMessage {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
  NestedTestMessage nested = 3;
  repeated NestedTestMessage repeated_nested = 4;

  google.protobuf.Struct struct = 5;

  enum FOO {
    X = 0;
    Y = 1;
    Z = 2;
  }

  FOO foo = 6;

  repeated FOO foo_repeated = 7;

  google.protobuf.Empty empty = 8;
  repeated google.protobuf.Empty empties = 9;
  google.protobuf.Duration duration = 10;

  oneof one_of {
    NestedTestMessage first = 11;
    NestedTestMessage second = 12;
  }

  map<string, string> string_map = 13;
}

message NestedTestMessage {
  string name = 1;
}
